force-app/main/default/objects/Expense__c/fields/Debit_Account__c.field-meta.xml
<CustomField>
    <fullName>Debit_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Debit Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Debit Accounts</relationshipLabel>
    <relationshipName>Debit_Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>