force-app/main/default/objects/Expense__c/fields/Debited_On__c.field-meta.xml
<CustomField>
    <fullName>Debited_On__c</fullName>
    <description>Date when the amount is debited</description>
    <inlineHelpText>Select when the amount is debited</inlineHelpText>
    <label>Debited On</label>
    <required>true</required>
    <type>Date</type>
</CustomField>