force-app/main/default/objects/Expense__c/fields/Recurring_Payment__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurring Payment</label>
    <referenceTo>Recurring_Payment__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>